# Limits

./: .gitignore  CLAUDE.md  Cargo.toml  Trunk.toml  index.html  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: deploy.yml
src/: main.rs  sim.rs
